tests/ui/issues/issue-16562.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-16562.rs:10:6
   |
LL | impl<T, M: MatrixShape> Collection for Col<M, usize> {
   |      ^ unconstrained type parameter
   |
help: Either remove the type parameter 'T' or make use of it, for example ` for S<T>`.
   |
LL - impl<T, M: MatrixShape> Collection for Col<M, usize> {
LL + impl<, M: MatrixShape> Collection for Col<M, usize> {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
